--- a/src/resources/views/pages/admin/manage-products.ejs
+++ b/src/resources/views/pages/admin/manage-products.ejs
@@ -330,301 +330,47 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="action">
-                            <div >
-                                <a class="me-1 btn p-0 text-warning">
-                                    <span><i class="far fa-edit fa-2x"></i></span>
-                                </a>
-                                <a class="btn p-0 text-danger">
-                                    <span><i class="fas fa-trash fa-2x"></i></span>
-                                </a>
+                <% products.forEach(function(product) { %>
+                    <div class="col-lg-3 col-md-6 col-12">
+                        <!-- Start Single Product -->
+                        <div class="single-product">
+                            <div class="action">
+                                <div >
+                                    <a href="/admin/products/<%= product.productID %>/edit"class="me-1 btn p-0 text-warning">
+                                        <span><i class="far fa-edit fa-2x"></i></span>
+                                    </a>
+                                    <button onClick="onAlertDelete('<%= product.productID %>' , '<%= product.productName %>' )" class="btn p-0 text-danger">
+                                        <span><i class="fas fa-trash fa-2x"></i></span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="product-image">
+                                <img src="<%= product.productImage %>" alt="#">
+                                <div class="button">
+                                    <a href="./product-details.html" class="btn"><i class="lni lni-cart"></i> Add to Cart</a>
+                                </div>
+                            </div>
+                            <div class="product-info">
+                                <span class="category"><%= product.productTypeName %></span>
+                                <h4 class="title">
+                                    <a href="/products/<%= product.productID %>"><%= product.productName %></a>
+                                </h4>
+                                <ul class="review">
+                                    <li><i class="lni lni-star-filled"></i></li>
+                                    <li><i class="lni lni-star-filled"></i></li>
+                                    <li><i class="lni lni-star-filled"></i></li>
+                                    <li><i class="lni lni-star-filled"></i></li>
+                                    <li><i class="lni lni-star"></i></li>
+                                    <li><span>4.0 Review(s)</span></li>
+                                </ul>
+                                <div class="price">
+                                    <span>$<%= product.salePrice %></span>
+                                </div>
                             </div>
                         </div>
-                        <div class="product-image">
-                            <img src="/images/products/product-1.jpg" alt="#">
-                            <div class="button">
-                                <a href="./product-details.html" class="btn"><i class="lni lni-cart"></i> Add to Cart</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Watches</span>
-                            <h4 class="title">
-                                <a href="./product-details.html">Xiaomi Mi Band 5</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star"></i></li>
-                                <li><span>4.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$199.00</span>
-                            </div>
-                        </div>
+                        <!-- End Single Product -->
                     </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="action">
-                            <div >
-                                <a class="me-1 btn p-0 text-warning">
-                                    <span><i class="far fa-edit fa-2x"></i></span>
-                                </a>
-                                <a class="btn p-0 text-danger">
-                                    <span><i class="fas fa-trash fa-2x"></i></span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <img src="/images/products/product-2.jpg" alt="#">
-                            <span class="sale-tag">-25%</span>
-                            <div class="button">
-                                <a href="./product-details.html" class="btn"><i class="lni lni-cart"></i> Add to Cart</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Speaker</span>
-                            <h4 class="title">
-                                <a href="./product-details.html">Big Power Sound Speaker</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><span>5.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$275.00</span>
-                                <span class="discount-price">$300.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="action">
-                            <div >
-                                <a class="me-1 btn p-0 text-warning">
-                                    <span><i class="far fa-edit fa-2x"></i></span>
-                                </a>
-                                <a class="btn p-0 text-danger">
-                                    <span><i class="fas fa-trash fa-2x"></i></span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <img src="/images/products/product-3.jpg" alt="#">
-                            <div class="button">
-                                <a href="./product-details.html" class="btn"><i class="lni lni-cart"></i> Add to Cart</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Camera</span>
-                            <h4 class="title">
-                                <a href="./product-details.html">WiFi Security Camera</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><span>5.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$399.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="action">
-                            <div >
-                                <a class="me-1 btn p-0 text-warning">
-                                    <span><i class="far fa-edit fa-2x"></i></span>
-                                </a>
-                                <a class="btn p-0 text-danger">
-                                    <span><i class="fas fa-trash fa-2x"></i></span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <img src="/images/products/product-4.jpg" alt="#">
-                            <span class="new-tag">New</span>
-                            <div class="button">
-                                <a href="./product-details.html" class="btn"><i class="lni lni-cart"></i> Add to Cart</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Phones</span>
-                            <h4 class="title">
-                                <a href="./product-details.html">iphone 6x plus</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><span>5.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$400.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="action">
-                            <div >
-                                <a class="me-1 btn p-0 text-warning">
-                                    <span><i class="far fa-edit fa-2x"></i></span>
-                                </a>
-                                <a class="btn p-0 text-danger">
-                                    <span><i class="fas fa-trash fa-2x"></i></span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <img src="/images/products/product-5.jpg" alt="#">
-                            <div class="button">
-                                <a href="./product-details.html" class="btn"><i class="lni lni-cart"></i> Add to Cart</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Headphones</span>
-                            <h4 class="title">
-                                <a href="./product-details.html">Wireless Headphones</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><span>5.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$350.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="action">
-                            <div >
-                                <a class="me-1 btn p-0 text-warning">
-                                    <span><i class="far fa-edit fa-2x"></i></span>
-                                </a>
-                                <a class="btn p-0 text-danger">
-                                    <span><i class="fas fa-trash fa-2x"></i></span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <img src="/images/products/product-6.jpg" alt="#">
-                            <div class="button">
-                                <a href="./product-details.html" class="btn"><i class="lni lni-cart"></i> Add to Cart</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Speaker</span>
-                            <h4 class="title">
-                                <a href="./product-details.html">Mini Bluetooth Speaker</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star"></i></li>
-                                <li><span>4.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$70.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div class="single-product">
-                        <div class="action">
-                            <div >
-                                <a class="me-1 btn p-0 text-warning">
-                                    <span><i class="far fa-edit fa-2x"></i></span>
-                                </a>
-                                <a class="btn p-0 text-danger">
-                                    <span><i class="fas fa-trash fa-2x"></i></span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="product-image">
-                            <img src="/images/products/product-7.jpg" alt="#">
-                            <span class="sale-tag">-50%</span>
-                            <div class="button">
-                                <a href="./product-details.html" class="btn"><i class="lni lni-cart"></i> Add to Cart</a>
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="category">Headphones</span>
-                            <h4 class="title">
-                                <a href="./product-details.html">PX7 Wireless Headphones</a>
-                            </h4>
-                            <ul class="review">
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star-filled"></i></li>
-                                <li><i class="lni lni-star"></i></li>
-                                <li><span>4.0 Review(s)</span></li>
-                            </ul>
-                            <div class="price">
-                                <span>$100.00</span>
-                                <span class="discount-price">$200.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End Single Product -->
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <!-- Start Single Product -->
-                    <div >
-                        <div class="single-product" style="height:300px; display:flex;justify-content: center;align-items:center">
-                            <div >
-                                <a href="#">
-                                    <span>
-                                        <i class="fas fa-plus fa-5x"></i>
-                                    </span>
-                                </a>
-                                
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <!-- End Single Product -->
-                </div>
+                    <% }); %>
             </div>
         </div>
     </section>
@@ -710,8 +456,27 @@
             </ul>
         </div>
     </section>
+    <form method="POST" id="delete-product-form"></form>
     <!-- End Shipping Info -->
     <%- include('../../partials/footer'); %>
+    <script>
+        var deleteForm=document.getElementById('delete-product-form');
+        const onAlertDelete=(id,name)=>{
+            const result= confirm(`Do you want to remove product ${name} `);
+            if(result){
+                console.log(id);
+                deleteForm.action='/products/'+id+"/delete";
+                deleteForm.submit();
+                //console.log(deleteForm);
+            }
+                
+            }
+        //when diolog confirm clicks
+        // document.addEventListener("DOMContentLoaded",function(){
+        //     console.log(23);
+            
+        // })
+    </script>
 </body>
 
 </html>
