--- a/src/resources/views/pages/product-detail.ejs
+++ b/src/resources/views/pages/product-detail.ejs
@@ -326,7 +326,7 @@
                         <div class="product-images">
                             <main id="gallery">
                                 <div class="main-img">
-                                    <img src="/images/product-details/01.jpg" id="current" alt="#">
+                                    <img src="<%= product.productImage %>" id="current" alt="#">
                                 </div>
                                 <div class="images">
                                     <img src="/images/product-details/01.jpg" class="img" alt="#">
@@ -340,13 +340,10 @@
                     </div>
                     <div class="col-lg-6 col-md-12 col-12">
                         <div class="product-info">
-                            <h2 class="title">GoPro Karma Camera Drone</h2>
-                            <p class="category"><i class="lni lni-tag"></i> Drones:<a href="javascript:void(0)">Action
-                                    cameras</a></p>
-                            <h3 class="price">$850<span>$945</span></h3>
-                            <p class="info-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt
-                                ut labore et dolore magna aliqua.</p>
+                            <h2 class="title"><%= product.productName %></h2>
+                            <p class="category"><i class="lni lni-tag"></i> Drones:<a href="javascript:void(0)"><%= product.productTypeName %></a></p>
+                            <h3 class="price">$<%= product.salePrice %><span>$945</span></h3>
+                            <p class="info-text"><%= product.description %></p>
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-12">
                                     <div class="form-group color-option">
