--- a/src/resources/views/pages/feedback.ejs
+++ b/src/resources/views/pages/feedback.ejs
@@ -333,21 +333,21 @@
                     <h4 class="text-center">Form Feedback</h4>
                     <div class="row mt-5">
                         <div>
-                            <form>
+                            <form action="/feedback" method="post" >
                                 <div class="mb-3">
-                                    <input type="text" class="form-control" placeholder="Your name"  >
+                                    <input type="text" class="form-control" placeholder="Your name" name="custName">
                                 </div>
                                 <div class="mb-3">
-                                    <input type="text" class="form-control" placeholder="Tên sản phẩm"  >
+                                    <input type="text" class="form-control" placeholder="Tên sản phẩm" name="productName">
                                 </div>
                                 <div class="mb-3">         
-                                    <input type="text" class="form-control" placeholder="Your Phone" >
+                                    <input type="text" class="form-control" placeholder="Your Phone" name="custPhone">
                                 </div>
                                 <div class="mb-3">         
-                                    <input type="text" class="form-control" placeholder="Your Email" >
+                                    <input type="text" class="form-control" placeholder="Your Email" name="custEmail">
                                 </div>
                                 <div class="mb-3">         
-                                  <textarea type="text" class="form-control" placeholder="You feedback" style="min-height:80px"></textarea>
+                                  <textarea type="text" class="form-control" placeholder="You feedback" style="min-height:80px" name="content"></textarea>
                                 </div>
                                 <div class="text-center">
                                     <button type="submit" class="btn btn-primary">Sent your feedback</button>
